--- a/app/views/widgets.html
+++ b/app/views/widgets.html
@@ -1,4 +1,4 @@
-<h3>Widgets</h3>
+<h3>Widgets</h3>  
 <!-- START row-->
 <div class="row">
    <div class="col-lg-4">
@@ -6,7 +6,7 @@
       <div class="panel widget">
          <div class="panel-body">
             <div class="text-right text-muted">
-               <em class="fa fa-gamepad fa-2x"></em>
+               <i class="md-gamepad md-2x"></i> 
             </div>
             <h3 class="mt0">99.999</h3>
             <p class="text-muted">Games played last month</p>
@@ -24,7 +24,7 @@
       <div class="panel widget">
          <div class="panel-body">
             <div class="text-right text-muted">
-               <em class="fa fa-coffee fa-2x"></em>
+               <i class="md-desktop-windows md-2x"></i> 
             </div>
             <h3 class="mt0">300</h3>
             <p class="text-muted">Coffee cups per day</p>
@@ -42,7 +42,7 @@
       <div class="panel widget">
          <div class="panel-body">
             <div class="text-right text-muted">
-               <em class="fa fa-upload fa-2x"></em>
+               <i class="md-cloud-upload md-2x"></i> 
             </div>
             <h3 class="mt0">1000 Gb</h3>
             <p class="text-muted">Average Monthly Uploads</p>
@@ -66,7 +66,7 @@
             <div class="col-xs-6 bb br">
                <div class="row row-table row-flush">
                   <div class="col-xs-4 text-center text-info">
-                     <em class="fa fa-users fa-2x"></em>
+                     <i class="md-view-carousel md-2x"></i>
                   </div>
                   <div class="col-xs-8">
                      <div class="panel-body text-center">
@@ -79,11 +79,11 @@
             <div class="col-xs-6 bb">
                <div class="row row-table row-flush">
                   <div class="col-xs-4 text-center text-danger">
-                     <em class="fa fa-music fa-2x"></em>
+                     <i class="md-data-usage md-2x"></i>  
                   </div>
                   <div class="col-xs-8">
                      <div class="panel-body text-center">
-                        <h4 class="mt0">100%</h4>
+                        <h4 class="mt0">100 TB</h4>
                         <p class="mb0 text-muted">VOLUME</p>
                      </div>
                   </div>
@@ -94,7 +94,7 @@
             <div class="col-xs-6 br">
                <div class="row row-table row-flush">
                   <div class="col-xs-4 text-center text-inverse">
-                     <em class="fa fa-code-fork fa-2x"></em>
+                     <i class="md-settings-ethernet md-2x"></i>
                   </div>
                   <div class="col-xs-8">
                      <div class="panel-body text-center">
@@ -107,12 +107,12 @@
             <div class="col-xs-6">
                <div class="row row-table row-flush">
                   <div class="col-xs-4 text-center text-success">
-                     <em class="fa fa-inbox fa-2x"></em>
+                     <i class=" md-access-time md-2x"></i>
                   </div>
                   <div class="col-xs-8">
                      <div class="panel-body text-center">
                         <h4 class="mt0">10</h4>
-                        <p class="mb0 text-muted">NEW MESSAGES</p>
+                        <p class="mb0 text-muted">TIME ZONES</p>
                      </div>
                   </div>
                </div>
@@ -249,7 +249,7 @@
                </div>
                <div class="col-xs-4">
                   <a href="#" class="text-white">
-                     <em class="fa fa-comments fa-2x"></em>
+                     <i class="md-chat md-2x"></i> 
                   </a>
                </div>
             </div>
@@ -277,7 +277,7 @@
       <div class="panel widget bg-success">
          <div class="row row-table">
             <div class="col-xs-4 text-center bg-success-dark pv-lg">
-               <em class="icon-share fa-3x"></em>
+               <i class="md-view-carousel md-3x"></i> 
             </div>
             <div class="col-xs-8 pv-lg">
                <div class="h1 m0 text-bold">150</div>
@@ -291,7 +291,7 @@
       <div class="panel widget bg-danger">
          <div class="row row-table">
             <div class="col-xs-4 text-center bg-danger-dark pv-lg">
-               <em class="icon-star fa-3x"></em>
+               <i class="md-verified-user md-3x"></i> 
             </div>
             <div class="col-xs-8 pv-lg">
                <div class="h1 m0 text-bold">7000</div>
@@ -305,7 +305,7 @@
       <div class="panel widget bg-warning">
          <div class="row row-table">
             <div class="col-xs-4 text-center bg-warning-dark pv-lg">
-               <em class="icon-trophy fa-3x"></em>
+               <i class="md-perm-media md-3x"></i> 
             </div>
             <div class="col-xs-8 pv-lg">
                <div class="h1 m0 text-bold">10</div>
@@ -333,7 +333,7 @@
                   1,3,4,7,5,9,4,4,7,5,9,6,4</div>
             </div>
          </div>
-         <div class="panel-body bg-inverse">
+         <div class="panel-body bg-success-light">
             <div class="row row-table text-center">
                <div class="col-xs-4">
                   <p class="m0 h3">15080</p>
@@ -362,7 +362,7 @@
                <!-- 1,3,4,7,5,9,4,4,7,5,9,6,4-->
             </div>
          </div>
-         <div class="panel-body bg-inverse">
+         <div class="panel-body bg-primary-light">
             <div class="row text-center">
                <div class="col-xs-6">
                   <!-- Bar chart-->
@@ -419,7 +419,7 @@
       <div class="panel widget">
          <div class="row row-table row-flush">
             <div class="col-xs-4 bg-info text-center">
-               <em class="fa fa-users fa-2x"></em>
+               <i class="md-contacts md-2x"></i> 
             </div>
             <div class="col-xs-8">
                <div class="panel-body text-center">
@@ -436,7 +436,7 @@
       <div class="panel widget">
          <div class="row row-table row-flush">
             <div class="col-xs-4 bg-danger text-center">
-               <em class="fa fa-music fa-2x"></em>
+               <i class="md-my-library-add md-2x"></i> 
             </div>
             <div class="col-xs-8">
                <div class="panel-body text-center">
@@ -453,12 +453,12 @@
       <div class="panel widget">
          <div class="row row-table row-flush">
             <div class="col-xs-4 bg-inverse text-center">
-               <em class="fa fa-code-fork fa-2x"></em>
+               <i class="md-store md-2x"></i> 
             </div>
             <div class="col-xs-8">
                <div class="panel-body text-center">
                   <h4 class="mt0">150</h4>
-                  <p class="mb0 text-muted">FORKS</p>
+                  <p class="mb0 text-muted">PURCHASES</p>
                </div>
             </div>
          </div>
@@ -470,7 +470,7 @@
       <div class="panel widget">
          <div class="row row-table row-flush">
             <div class="col-xs-4 bg-green text-center">
-               <em class="fa fa-inbox fa-2x"></em>
+               <i class="md-settings-ethernet md-2x"></i> 
             </div>
             <div class="col-xs-8">
                <div class="panel-body text-center">
@@ -725,7 +725,7 @@
          <div class="panel-heading">
             <div class="row">
                <div class="col-xs-3">
-                  <em class="fa fa-comments fa-5x"></em>
+                  <i class="md-question-answer md-5x"></i>  
                </div>
                <div class="col-xs-9 text-right">
                   <div class="text-lg">26</div>
@@ -748,7 +748,7 @@
          <div class="panel-heading">
             <div class="row">
                <div class="col-xs-3">
-                  <em class="fa fa-tasks fa-5x"></em>
+                 <i class="md-sort md-5x"></i>  
                </div>
                <div class="col-xs-9 text-right">
                   <div class="text-lg">12</div>
@@ -771,7 +771,7 @@
          <div class="panel-heading">
             <div class="row">
                <div class="col-xs-3">
-                  <em class="fa fa-shopping-cart fa-5x"></em>
+                  <i class="md-loyalty md-5x"></i>  
                </div>
                <div class="col-xs-9 text-right">
                   <div class="text-lg">124</div>
@@ -794,7 +794,7 @@
          <div class="panel-heading">
             <div class="row">
                <div class="col-xs-3">
-                  <em class="fa fa-support fa-5x"></em>
+                  <i class="md-assignment-ind md-5x"></i>  
                </div>
                <div class="col-xs-9 text-right">
                   <div class="text-lg">13</div>
