--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -22,7 +22,7 @@
       <div class="panel widget">
          <div class="row row-table row-flush">
             <div class="col-xs-4 bg-info text-center">
-               <em class="fa fa-users fa-2x"></em>
+               <i class="md-group-add md-2x"></i>  
             </div>
             <div class="col-xs-8">
                <div class="panel-body text-center">
@@ -39,11 +39,11 @@
       <div class="panel widget">
          <div class="row row-table row-flush">
             <div class="col-xs-4 bg-danger text-center">
-               <em class="fa fa-music fa-2x"></em>
+               <i class="md-data-usage md-2x"></i> 
             </div>
             <div class="col-xs-8">
                <div class="panel-body text-center">
-                  <h4 class="mt0">100%</h4>
+                  <h4 class="mt0">100GB</h4>
                   <p class="mb0 text-muted">VOLUME</p>
                </div>
             </div>
@@ -56,7 +56,7 @@
       <div class="panel widget">
          <div class="row row-table row-flush">
             <div class="col-xs-4 bg-inverse text-center">
-               <em class="fa fa-code-fork fa-2x"></em>
+               <i class="md-nfc md-2x"></i> 
             </div>
             <div class="col-xs-8">
                <div class="panel-body text-center">
@@ -73,12 +73,12 @@
       <div class="panel widget">
          <div class="row row-table row-flush">
             <div class="col-xs-4 bg-green text-center">
-               <em class="fa fa-inbox fa-2x"></em>
+               <i class=" md-developer-mode md-2x"></i> 
             </div>
             <div class="col-xs-8">
                <div class="panel-body text-center">
-                  <h4 class="mt0">10</h4>
-                  <p class="mb0 text-muted">NEW MESSAGES</p>
+                  <h4 class="mt0">10M</h4>
+                  <p class="mb0 text-muted">LINES OF CODE</p>
                </div>
             </div>
          </div>
@@ -87,55 +87,11 @@
    </div>
 </div>
 <div class="row">
-   <div class="col-lg-3 col-sm-6">
-      <!-- START widget-->
-      <div class="panel widget bg-primary">
-         <div class="row row-table">
-            <div class="col-xs-4 text-center bg-primary-dark pv-lg">
-               <i class="md-account-circle md-4x"></i>
-            </div>
-            <div class="col-xs-8 pv-lg">
-               <div class="h2 mt0">1700</div>
-               <div class="text-uppercase">Uploads</div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <div class="col-lg-3 col-sm-6">
-      <!-- START widget-->
-      <div class="panel widget bg-purple">
-         <div class="row row-table">
-            <div class="col-xs-4 text-center bg-purple-dark pv-lg">
-               <i class="md-alarm-on md-4x"></i>
-            </div>
-            <div class="col-xs-8 pv-lg">
-               <div class="h2 mt0">700
-                  <small>GB</small>
-               </div>
-               <div class="text-uppercase">Quota</div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <div class="col-lg-3 col-md-6 col-sm-12">
-      <!-- START widget-->
-      <div class="panel widget bg-green">
-         <div class="row row-table">
-            <div class="col-xs-4 text-center bg-green-dark pv-lg">
-               <i class="md-wifi-tethering md-4x"></i>
-            </div>
-            <div class="col-xs-8 pv-lg">
-               <div class="h2 mt0">500</div>
-               <div class="text-uppercase">Reviews</div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <div class="col-lg-3 col-md-6 col-sm-12">
-      <!-- START date widget-->
+   <div class="col-lg-3 col-sm-6">     
+       <!-- START date widget-->
       <div class="panel widget">
          <div class="row row-table">
-            <div class="col-xs-4 text-center bg-green pv-lg">
+            <div class="col-xs-4 text-center bg-success-light pv-lg">
                <!-- See formats: https://docs.angularjs.org/api/ng/filter/date-->
                <now format="MMMM" class="text-sm"></now>
                <br/>
@@ -149,8 +105,52 @@
             </div>
          </div>
       </div>
-      <!-- END date widget    -->
+        <!-- END date widget    -->   
+    </div>        
+   <div class="col-lg-3 col-sm-6">
+      <!-- START widget-->
+      <div class="panel widget bg-pink">
+         <div class="row row-table">
+            <div class="col-xs-4 text-center bg-pink pv-lg">
+               <i class="md-alarm-on md-4x"></i>
+            </div>
+            <div class="col-xs-8 pv-lg">
+               <div class="h2 mt0">700
+                  <small>GB</small>
+               </div>
+               <div class="text-uppercase">Quota</div>
+            </div>
+         </div>
+      </div>
    </div>
+   <div class="col-lg-3 col-md-6 col-sm-12">
+      <!-- START widget-->
+      <div class="panel widget bg-purple">
+         <div class="row row-table">
+            <div class="col-xs-4 text-center bg-purple pv-lg">
+               <i class="md-wifi-tethering md-4x"></i>
+            </div>
+            <div class="col-xs-8 pv-lg">
+               <div class="h2 mt0">500</div>
+               <div class="text-uppercase">Reviews</div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div class="col-lg-3 col-md-6 col-sm-12">
+        <!-- START widget-->
+     <div class="panel widget bg-info">
+         <div class="row row-table">
+            <div class="col-xs-4 text-center bg-info-light pv-lg">
+               <i class="md-account-circle md-4x"></i>
+            </div>
+            <div class="col-xs-8 pv-lg">
+               <div class="h2 mt0">1700</div>
+               <div class="text-uppercase">Uploads</div>
+            </div>
+         </div>
+      </div>
+   </div>    
 </div>
 <!-- END widgets box-->
 <div class="row">
@@ -183,7 +183,6 @@
                <div class="panel-body">
                   <div class="clearfix">
                      <h3 class="pull-left text-muted mt0">300</h3>
-                     <em class="pull-right text-muted fa fa-coffee fa-2x"></em>
                   </div>
                   <div sparkline="" data-type="line" data-height="80" data-width="100%" data-line-width="2" data-line-color="{{colorByName('purple')}}" data-spot-color="#888" data-min-spot-color="{{colorByName('purple')}}" data-max-spot-color="{{colorByName('purple')}}"
                   data-fill-color="" data-highlight-line-color="#fff" data-spot-radius="3" values="1,3,4,7,5,9,4,4,7,5,9,6,4" data-resize="true" class="pv-lg"></div>
