--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2359,8 +2359,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-success {
   color: #ffffff;
-  background-color: #259b24;
-  border-color: #259b24;
+  background-color: #4caf50;
+  border-color: #4caf50;
 }
 .btn-success:hover,
 .btn-success:focus,
@@ -2494,8 +2494,8 @@ fieldset[disabled] .btn-warning.active {
 }
 .btn-danger {
   color: #ffffff;
-  background-color: #e51c23;
-  border-color: #e51c23;
+  background-color: #f44336;
+  border-color: #f44336;
 }
 .btn-danger:hover,
 .btn-danger:focus,
