--- a/app/css/app.css
+++ b/app/css/app.css
@@ -13345,20 +13345,22 @@ textarea.bootstrap-tagsinput {
 }
 .form-wizard > ol > li {
   min-height: 50px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #fcfcfc;
-  cursor: pointer;
-  -webkit-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+padding-top: 10px;
+padding-bottom: 15px;
+background-color: #F4F4F4;
+cursor: pointer;
+-webkit-transition: all 0.3s ease;
+-o-transition: all 0.3s ease;
+transition: all 0.3s ease;
+font-family: 'Roboto', sans-serif;
+/* font-size: 14px; */
+border-radius: 2px;
 }
 .form-wizard > ol > li > a {
   text-decoration: none;
 }
 .form-wizard > ol > li .label {
   background-color: #5d9cec;
-  vertical-align: super;
   margin-right: 6px;
 }
 .form-wizard > ol > li .label[href]:hover,
@@ -13367,7 +13369,9 @@ textarea.bootstrap-tagsinput {
 }
 .form-wizard > ol > li h4 {
   display: inline-block;
-  color: #515253;
+  color: #898B8C;
+  text-transform: uppercase;
+  font-size: 12px;
 }
 .form-wizard > ol > li small {
   display: block;
@@ -13426,7 +13430,7 @@ textarea.bootstrap-tagsinput {
   padding: 10px;
 }
 .form-wizard.wizard-vertical > ol > li h4 {
-  font-size: 14px;
+  font-size: 11px;
 }
 .form-wizard.wizard-vertical > div {
   float: right;
