--- a/app/css/theme-g.css
+++ b/app/css/theme-g.css
@@ -108,11 +108,11 @@ body,
 .sidebar .nav > li.active .nav,
 .sidebar .nav > li.open .nav {
   background-color: #2F3444;
-  color: #fff;
+  color: #7266ba;
 }
 .sidebar .nav > li.active > a > em,
 .sidebar .nav > li.open > a > em {
-  color: #fff;
+  color: #7266ba;
 }
 .sidebar-subnav {
   background-color: #3a3f51;
