--- a/app/css/theme-h.css
+++ b/app/css/theme-h.css
@@ -98,7 +98,7 @@ body,
 .sidebar .nav > li.open > a,
 .sidebar .nav > li.active .nav,
 .sidebar .nav > li.open .nav {
-  background-color: #383d4e;
+  background-color: #2F3444;
   color: #ff5177;
 }
 .sidebar .nav > li.active > a > em,
