--- a/app/css/theme-b.css
+++ b/app/css/theme-b.css
@@ -12,7 +12,7 @@ body,
   background-color: #fff;
 }
 .topnavbar .navbar-header {
-  background-color: #009688;
+  background-color: #4caf50;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff7266ba', endColorstr='#ff9289ca', GradientType=1);
 }
@@ -23,7 +23,7 @@ body,
 }
 .topnavbar .navbar-nav > li > a,
 .topnavbar .navbar-nav > .open > a {
-  color: #009688;
+  color: #4caf50;
 }
 .topnavbar .navbar-nav > li > a:hover,
 .topnavbar .navbar-nav > .open > a:hover,
@@ -43,13 +43,13 @@ body,
   color: #ffffff;
 }
 .topnavbar .nav-wrapper {
-  background-color: #009688;
+  background-color: #4caf50;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff7266ba', endColorstr='#ff9289ca', GradientType=1);
 }
 @media only screen and (min-width: 768px) {
   .topnavbar {
-    background-color: #009688;   
+    background-color: #4caf50;   
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff7266ba', endColorstr='#ff9289ca', GradientType=1);
   }
@@ -66,7 +66,7 @@ body,
   .topnavbar .navbar-nav > .open > a:hover,
   .topnavbar .navbar-nav > li > a:focus,
   .topnavbar .navbar-nav > .open > a:focus {
-    color:   #009688;
+    color:   #2c662e;
   }
 }
 /* ========================================================================
@@ -86,7 +86,7 @@ body,
 .sidebar .nav > li > .nav-item:focus,
 .sidebar .nav > li > a:hover,
 .sidebar .nav > li > .nav-item:hover {
-  color: #009688;
+  color: #4caf50;
 }
 .sidebar .nav > li > a > em,
 .sidebar .nav > li > .nav-item > em {
@@ -99,11 +99,11 @@ body,
 .sidebar .nav > li.active .nav,
 .sidebar .nav > li.open .nav {
   background-color: #fcfcfc;
-  color: #009688;
+  color: #4caf50;
 }
 .sidebar .nav > li.active > a > em,
 .sidebar .nav > li.open > a > em {
-  color: #009688;
+  color: #4caf50;
 }
 .sidebar-subnav {
   background-color: #ffffff;
@@ -119,15 +119,15 @@ body,
 .sidebar-subnav > li > .nav-item:focus,
 .sidebar-subnav > li > a:hover,
 .sidebar-subnav > li > .nav-item:hover {
-  color: #009688;
+  color: #4caf50;
 }
 .sidebar-subnav > li.active > a,
 .sidebar-subnav > li.active > .nav-item {
-  color: #009688;
+  color: #4caf50;
 }
 .sidebar-subnav > li.active > a:after,
 .sidebar-subnav > li.active > .nav-item:after {
-  border-color: #009688;
+  border-color: #4caf50;
   background-color: #7266ba;
 }
 /* ========================================================================
