--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6592,7 +6592,7 @@ body {
 .sidebar > .nav > li > a,
 .sidebar > .nav > li > .nav-item {
   padding: 12px 24px;
-  color: #fff;
+  color: #e1e2e3;
   letter-spacing: .025em;
   font-weight: normal;
   font-size: 12.5px;
